cmake_minimum_required(VERSION 3.5)
project(control_msgs)

find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(action_msgs REQUIRED)
find_package(builtin_interfaces REQUIRED)

set(msg_files
  # msg/ProgramState.msg

)

set(srv_files
  srv/ActivateController.srv
  srv/ControlCommand.srv
)

set(action_files
  # action/SetMode.action
)

rosidl_generate_interfaces(${PROJECT_NAME}
  # ${msg_files}
  ${srv_files}
  # ${action_files}
  DEPENDENCIES
    action_msgs
    builtin_interfaces
)

ament_export_dependencies(rosidl_default_runtime)

ament_package()
